--- a/_template/index.html
+++ b/_template/index.html
@@ -7,10 +7,11 @@
     <title>Class 03</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 </head>
 <body>
-    <h1> This is a sub project in the 03 directory.</h1>
-    <img src= "dog.jpeg"> 
+    <h1> This sub project is the TEMPLATE.</h1>
+    
     
 </body>
 </html>
