--- a/Website/why.html
+++ b/Website/why.html
@@ -32,13 +32,16 @@
     </div>
 
     <div id= "boxwhy2"> 
-            <div class="container"><canvas width="1400" height="600" id="fishtank">
+        <div class="container"><canvas width="1500" height="800" id="fishtank">
                 </div>
        <h1>  According to National Geographic, one of the most comprehensive studies ever compiled on illegal shark killing brings new startling statistics. An estimated 100 million sharks are killed every year around the world, a number that far exceeds what many populations need to recover. The statistical report, compiled by researchers at Dalhousie University in Halifax, Canada, crunched numbers of reported shark catches globally and used data from nearly 100 former papers to estimate the number of unreported shark deaths every year. In a moving range, the researchers were able to calculate that between 6.4% and 7.9% of sharks of all species are killed annually. To put that range in perspective, researchers analyzed life data from 62 shark species and found that only 4.9% of sharks can be killed each year to maintain population stability. Anything more than that threatens long term survival of species like the oceanic white tip, porbeagle and several kinds of hammerheads. What’s worse, sharks are considered uniquely vulnerable because they take long periods to mature and generally produce few young over their lifetimes.
         </h1>
             </div>
 
             <div id= "boxwhy3"> 
+                <div class= "stat">
+                    <img src="sharkstat.png"> 
+                </div>
                     
                     </div>
 
