--- a/Website/what.html
+++ b/Website/what.html
@@ -47,7 +47,11 @@
             </div>
 
             <div id= "box3"> 
-                
+
+                    <div class= "stat">
+                            <img src="scons.png"> 
+                        </div>
+                        
                     </div>
 
 
