--- a/Website/what.html
+++ b/Website/what.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/gif" href="animated_favicon1.gif">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div>
@@ -51,7 +52,7 @@
                     <div class= "stat">
                             <img src="scons.png"> 
                         </div>
-                        
+
                     </div>
 
 
